# esp-rainmaker

components/esp_rainmaker/: CMakeLists.txt
components/esp_rainmaker/include/: esp_rmaker_standard_devices.h  esp_rmaker_standard_params.h  esp_rmaker_standard_types.h
components/esp_rainmaker/src/core/: esp_rmaker_client_data.c  esp_rmaker_node_config.c  esp_rmaker_param.c  esp_rmaker_time_service.c  esp_rmaker_user_mapping.c
components/esp_rainmaker/src/standard_types/: esp_rmaker_standard_devices.c  esp_rmaker_standard_params.c
components/ht1621_lcd/: CMakeLists.txt  Kconfig  component.mk  ht1621.c  ht1621.h
components/user_debug_header/: CMakeLists.txt  Kconfig  component.mk  user_debug_header.c
components/user_debug_header/include/: user_debug_header.h
examples/common/app_reset/: CMakeLists.txt  app_reset.c  app_reset.h
examples/common/app_wifi/: CMakeLists.txt  app_wifi.c
examples/ys_thermostat/: CMakeLists.txt  HT1621 段码位图.md
examples/ys_thermostat/main/: CMakeLists.txt  app_adc_temperature.c  app_adc_temperature.h  app_chip_temperature.c  app_driver.c  app_main.c  app_priv.h  app_test.c  app_test.h  app_touch_pad.c  app_touch_pad.h  lcd.c  lcd.h
examples/ys_thermostat_bk/: CMakeLists.txt  sdkconfig.bk  温控器 - 快捷方式.lnk
examples/ys_thermostat_bk/main/: CMakeLists.txt  app_chip_temperature.h  app_driver.c  app_main.c  app_priv.h  app_test.c  app_touch_pad.c  app_touch_pad.h  lcd.h
