idf_component_register(SRCS ./app_driver.c 
                            ./app_main.c 
                            ./app_test.c
                            ./app_adc_temperature.c
                            ./app_touch_pad.c
                            ./lcd.c
                       INCLUDE_DIRS ".")

